--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,41 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <title>منصة أطفال غزة | Gaza Kid Mind Canvas</title>
+    <meta name="description" content="منصة عربية لدعم الصحة النفسية للأطفال في غزة عبر تتبع الصحة النفسية لطفل من خلال رسومه خلال الحرب." />
+    <meta name="keywords" content="أطفال غزة, صحة نفسية, دعم نفسي, أنشطة, رسم, حرب" />
+    <meta name="theme-color" content="#0ea5e9" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ar_AR" />
+    <meta property="og:title" content="منصة أطفال غزة | Gaza Kid Mind Canvas" />
+    <meta property="og:description" content="منصة عربية لدعم الصحة النفسية للأطفال في غزة عبر تتبع الصحة النفسية لطفل من خلال رسومه خلال الحرب." />
+    <meta property="og:url" content="https://example.com" />
+    <meta property="og:site_name" content="Gaza Kid Mind Canvas" />
+
+
+    <link rel="icon" href="/vite.svg" />
+    <link rel="canonical" href="https://example.com" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Gaza Kid Mind Canvas",
+        "url": "https://example.com",
+        "inLanguage": "ar",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://example.com/search?q={query}",
+          "query-input": "required name=query"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
