added logo gaza kid mind canvas

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,10 @@
     <meta property="og:site_name" content="Gaza Kid Mind Canvas" />
 
 
-    <link rel="icon" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
+    <link rel="apple-touch-icon" href="/logo.jpeg" />
+    <meta property="og:image" content="/logo.jpeg" />
+    <meta name="twitter:image" content="/logo.jpeg" />
     <link rel="canonical" href="https://example.com" />
 
     <script type="application/ld+json">
